[gd_scene load_steps=12 format=2]

[ext_resource path="res://WorldRelated/AbstractWorldSlice.tscn" type="PackedScene" id=1]
[ext_resource path="res://ObjectsRelated/Pickupables/Subs/Coin/Pickupables_Coin.tscn" type="PackedScene" id=2]
[ext_resource path="res://ObjectsRelated/TilesRelated/BaseTileSet.tscn" type="PackedScene" id=3]
[ext_resource path="res://WorldRelated/WorldSlices/Stage_001/Level01/WorldSlice_Stage01_01.gd" type="Script" id=4]
[ext_resource path="res://ObjectsRelated/TilesRelated/TileAssets/UncollidablesTileSet.tres" type="TileSet" id=5]
[ext_resource path="res://MiscRelated/VisualsRelated/KeyPressVisual/Visual_KeyPress.tscn" type="PackedScene" id=6]
[ext_resource path="res://AreaRegionRelated/Subs/PDAR_MapBounds/PDAR_MapBounds.tscn" type="PackedScene" id=7]
[ext_resource path="res://AreaRegionRelated/Subs/PlayerCaptureAreaRegion/PlayerCaptureAreaRegion.tscn" type="PackedScene" id=9]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 48, 41.5 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 567, 365.5 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 289.5, 388 )

[node name="WorldSlice_Stage01" instance=ExtResource( 1 )]
script = ExtResource( 4 )

[node name="BaseTileSet" parent="TileContainer" index="0" instance=ExtResource( 3 )]

[node name="TileMap" parent="TileContainer/BaseTileSet" index="0"]
tile_data = PoolIntArray( -2424809, 0, 0, -2424808, 0, 1, -2424807, 0, 2, -2359274, 0, 131076, -2359270, 0, 131076, -2293738, 0, 196612, -2293734, 0, 196612, -2228202, 0, 262148, -2228198, 0, 196612, -2162662, 0, 196612, -2097140, 0, 0, -2097139, 0, 1, -2097138, 0, 1, -2097137, 0, 2, -2097126, 0, 196612, -2031605, 0, 131076, -2031600, 0, 131076, -2031590, 0, 196612, -1966069, 0, 196612, -1966064, 0, 262148, -1966063, 0, 1, -1966062, 0, 1, -1966061, 0, 1, -1966060, 0, 1, -1966059, 0, 1, -1966058, 0, 1, -1966057, 0, 2, -1966054, 0, 196612, -1900533, 0, 196612, -1900518, 0, 196612, -1834997, 0, 196612, -1834982, 0, 196612, -1769461, 0, 196612, -1769446, 0, 196612, -1703925, 0, 196612, -1703920, 0, 131076, -1703916, 0, 131076, -1703910, 0, 196612, -1638389, 0, 196612, -1638384, 0, 196612, -1638380, 0, 196612, -1638374, 0, 262148, -1572853, 0, 196612, -1572848, 0, 196612, -1572844, 0, 196612, -1572843, 0, 1, -1572842, 0, 1, -1572841, 0, 1, -1572840, 0, 1, -1572839, 0, 2, -1507317, 0, 196612, -1507316, 0, 0, -1507315, 0, 2, -1507312, 0, 196612, -1507308, 0, 196612, -1441781, 0, 196612, -1441776, 0, 262148, -1441772, 0, 196612, -1376245, 0, 196612, -1376236, 0, 196612, -1310709, 0, 196612, -1310700, 0, 196612, -1245173, 0, 196612, -1245170, 0, 131072, -1245169, 0, 131073, -1245168, 0, 131074, -1245164, 0, 196612, -1179637, 0, 196612, -1179634, 0, 262144, -1179633, 0, 6, -1179632, 0, 196610, -1179628, 0, 196612, -1114101, 0, 196612, -1114097, 0, 196608, -1114096, 0, 196610, -1114092, 0, 262144, -1114091, 0, 1, -1114090, 0, 1, -1114089, 0, 1, -1114088, 0, 1, -1114087, 0, 1, -1114086, 0, 131074, -1048565, 0, 196612, -1048561, 0, 196608, -1048560, 0, 196610, -1048550, 0, 196612, -983029, 0, 196612, -983025, 0, 196608, -983024, 0, 196610, -983014, 0, 196612, -917493, 0, 196612, -917489, 0, 196608, -917488, 0, 196610, -917484, 0, 131072, -917483, 0, 131073, -917482, 0, 131073, -917481, 0, 131074, -917478, 0, 196612, -786437, 0, 131072, -786436, 0, 1, -786435, 0, 1, -786434, 0, 1, -786433, 0, 1, -851968, 0, 1, -851967, 0, 1, -851966, 0, 2, -851962, 0, 0, -851961, 0, 1, -851960, 0, 1, -851959, 0, 1, -851958, 0, 1, -851957, 0, 1, -851956, 0, 2, -851953, 0, 196608, -851952, 0, 196610, -851948, 0, 196608, -851945, 0, 196610, -851942, 0, 196612, -720901, 0, 196612, -786417, 0, 196608, -786416, 0, 196610, -786412, 0, 196608, -786409, 0, 196610, -786406, 0, 196612, -655365, 0, 196612, -720881, 0, 196608, -720880, 0, 196610, -720876, 0, 262144, -720875, 0, 262145, -720874, 0, 262145, -720873, 0, 262146, -720870, 0, 196612, -589829, 0, 196612, -655345, 0, 196608, -655344, 0, 196610, -655334, 0, 196612, -524293, 0, 196612, -589809, 0, 196608, -589808, 0, 196610, -589798, 0, 196612, -458757, 0, 196612, -524273, 0, 196608, -524272, 0, 6, -524271, 0, 131073, -524270, 0, 131073, -524269, 0, 131074, -524265, 0, 131072, -524264, 0, 1, -524263, 0, 1, -524262, 0, 262146, -393221, 0, 196612, -458737, 0, 262144, -458736, 0, 262145, -458735, 0, 262145, -458734, 0, 262145, -458733, 0, 262146, -458729, 0, 196612, -327685, 0, 196612, -393193, 0, 196612, -262149, 0, 196612, -327657, 0, 196612, -196613, 0, 196612, -262121, 0, 196612, -131077, 0, 196612, -196585, 0, 196612, -65541, 0, 196612, -131049, 0, 262148, -5, 0, 196612, 65531, 0, 196612, 131067, 0, 196612, 196603, 0, 196612, 131095, 0, 131072, 131096, 0, 131073, 131097, 0, 131073, 131098, 0, 131074, 262139, 0, 262148, 196631, 0, 196608, 196632, 0, 6, 196633, 0, 6, 196634, 0, 196610, 327678, 0, 131072, 327679, 0, 131073, 262144, 0, 131073, 262145, 0, 131073, 262146, 0, 131073, 262147, 0, 131073, 262148, 0, 131073, 262149, 0, 131073, 262150, 0, 131073, 262151, 0, 131074, 262159, 0, 0, 262160, 0, 1, 262161, 0, 1, 262162, 0, 1, 262163, 0, 2, 262167, 0, 196608, 262168, 0, 6, 262169, 0, 6, 262170, 0, 196610, 393214, 0, 196608, 393215, 0, 6, 327680, 0, 6, 327681, 0, 6, 327682, 0, 6, 327683, 0, 6, 327684, 0, 6, 327685, 0, 6, 327686, 0, 6, 327687, 0, 196610, 327703, 0, 196608, 327704, 0, 6, 327705, 0, 6, 327706, 0, 196610, 458750, 0, 262144, 458751, 0, 262145, 393216, 0, 262145, 393217, 0, 262145, 393218, 0, 262145, 393219, 0, 262145, 393220, 0, 262145, 393221, 0, 262145, 393222, 0, 262145, 393223, 0, 262146, 393239, 0, 262144, 393240, 0, 262145, 393241, 0, 262145, 393242, 0, 262146, 458760, 0, 0, 458761, 0, 1, 458762, 0, 1, 458763, 0, 1, 458764, 0, 1, 458765, 0, 1, 458766, 0, 1, 458767, 0, 1, 458768, 0, 1, 458769, 0, 1, 458770, 0, 1, 458771, 0, 1, 458772, 0, 1, 458773, 0, 1, 458774, 0, 2 )

[node name="BaseTileSet2" parent="TileContainer" index="1" instance=ExtResource( 3 )]

[node name="TileMap" parent="TileContainer/BaseTileSet2" index="0"]
tile_set = ExtResource( 5 )
tile_data = PoolIntArray( -1179633, 10, 131072, -1114092, 10, 131074, -1114086, 10, 131072, -786437, 10, 131073, -851947, 10, 2, -851946, 10, 2, -786411, 10, 2, -786410, 10, 2, -524272, 10, 131074, -524265, 10, 131073, -524262, 10, 131075 )

[node name="PlayerCaptureAreaRegion" parent="AreaRegionContainer" index="0" instance=ExtResource( 9 )]
position = Vector2( 749, -1139 )

[node name="CollisionShape2D" parent="AreaRegionContainer/PlayerCaptureAreaRegion" index="0"]
position = Vector2( 35, 28.5 )
shape = SubResource( 1 )

[node name="PDAR_MapBounds" parent="AreaRegionContainer" index="1" instance=ExtResource( 7 )]

[node name="CollisionShape2D" parent="AreaRegionContainer/PDAR_MapBounds" index="0"]
position = Vector2( 323, -74.5 )
shape = SubResource( 2 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="AreaRegionContainer/PDAR_MapBounds" index="1"]
position = Vector2( 618.5, -816 )
shape = SubResource( 3 )

[node name="Pickupables_Coin" parent="CoinsContainer" index="0" instance=ExtResource( 2 )]
position = Vector2( 463, -525 )

[node name="Pickupables_Coin2" parent="CoinsContainer" index="1" instance=ExtResource( 2 )]
position = Vector2( 685, 195 )

[node name="Pickupables_Coin3" parent="CoinsContainer" index="2" instance=ExtResource( 2 )]
position = Vector2( 691, -827 )

[node name="Position2D" type="Position2D" parent="PlayerSpawnCoordsContainer" index="0"]
position = Vector2( 49, 112 )

[node name="MiscContainer" type="Node2D" parent="." index="6"]

[node name="VBoxContainer3" type="VBoxContainer" parent="MiscContainer" index="0"]
margin_left = 95.0
margin_top = 12.0
margin_right = 200.0
margin_bottom = 91.0
custom_constants/separation = 10

[node name="Label" type="Label" parent="MiscContainer/VBoxContainer3" index="0"]
margin_right = 105.0
margin_bottom = 14.0
size_flags_horizontal = 6
custom_colors/font_color = Color( 0.866667, 0.866667, 0.866667, 1 )
text = "Move by holding"

[node name="HBoxContainer" type="HBoxContainer" parent="MiscContainer/VBoxContainer3" index="1"]
margin_top = 24.0
margin_right = 104.0
margin_bottom = 79.0
size_flags_horizontal = 6
custom_constants/separation = 20

[node name="VBoxContainer" type="VBoxContainer" parent="MiscContainer/VBoxContainer3/HBoxContainer" index="0"]
margin_right = 42.0
margin_bottom = 55.0

[node name="LabelLeft" type="Label" parent="MiscContainer/VBoxContainer3/HBoxContainer/VBoxContainer" index="0"]
margin_left = 9.0
margin_right = 33.0
margin_bottom = 14.0
size_flags_horizontal = 6
custom_colors/font_color = Color( 0.866667, 0.866667, 0.866667, 1 )
text = "Left"

[node name="VKP_Left" parent="MiscContainer/VBoxContainer3/HBoxContainer/VBoxContainer" index="1" instance=ExtResource( 6 )]
margin_top = 18.0
margin_right = 42.0
margin_bottom = 55.0

[node name="VBoxContainer2" type="VBoxContainer" parent="MiscContainer/VBoxContainer3/HBoxContainer" index="1"]
margin_left = 62.0
margin_right = 104.0
margin_bottom = 55.0

[node name="LabelRight" type="Label" parent="MiscContainer/VBoxContainer3/HBoxContainer/VBoxContainer2" index="0"]
margin_left = 5.0
margin_right = 37.0
margin_bottom = 14.0
size_flags_horizontal = 6
custom_colors/font_color = Color( 0.866667, 0.866667, 0.866667, 1 )
text = "Right"

[node name="VKP_Right" parent="MiscContainer/VBoxContainer3/HBoxContainer/VBoxContainer2" index="1" instance=ExtResource( 6 )]
margin_top = 18.0
margin_right = 42.0
margin_bottom = 55.0

[editable path="TileContainer/BaseTileSet"]
[editable path="TileContainer/BaseTileSet2"]
[editable path="AreaRegionContainer/PlayerCaptureAreaRegion"]
[editable path="AreaRegionContainer/PDAR_MapBounds"]
